--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Layout from "../../layouts/BlogPostLayout.astro";
 import { getCollection, render } from "astro:content";
 
