--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,27 +1,39 @@
 ---
 import PageHeader from "../components/PageHeader.astro";
-import FooterSection from '../components/FooterSection.astro';
+import FooterSection from "../components/FooterSection.astro";
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Daniel Arce  - Accoutant & Fullstack Developer</title>
+    <title>Daniel Arce - Accoutant & Fullstack Developer</title>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-K6TKKCBL');</script>
-<!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K6TKKCBL");
+    </script>
+    <!-- End Google Tag Manager -->
     <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <meta
       name="title"
       content="Daniel C. Arce - Accountant & Fullstack Developer"
     />
-    <meta name="description" content="Daniel C. Arce es un desarrollador de software fullstack y contador privado especializado en resolución problemas."/>
-    <meta name="keywords" content="contador, desarrollador de software, fullstack, finanzas, contabilidad, desarrollo web, aplicaciones móviles, soluciones tecnológicas"
+    <meta
+      name="description"
+      content="Daniel C. Arce es un desarrollador de software fullstack y contador privado especializado en resolución problemas."
+    />
+    <meta
+      name="keywords"
+      content="contador, desarrollador de software, fullstack, finanzas, contabilidad, desarrollo web, aplicaciones móviles, soluciones tecnológicas"
     />
 
     <!-- Open Graph / Facebook / LinkedIn -->
@@ -47,23 +59,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       name="twitter:description"
       content="Daniel C. Arce es un desarrollador de software fullstack y contador privado especializado en resolución problemas."
     />
-    <meta
-      name="twitter:image"
-      content="https://danielcarce.com/og-image.png"
-    />
-    
+    <meta name="twitter:image" content="https://danielcarce.com/og-image.png" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6TKKCBL"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-K6TKKCBL"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+    <!-- End Google Tag Manager (noscript) -->
     <PageHeader companyName="Daniel C. Arce" />
     <main>
       <slot />
       <!-- your content is injected here -->
     </main>
-<FooterSection/>
+    <FooterSection />
   </body>
   <style>
     h1 {
